@@ -9,16 +9,19 @@ all:
 	$(KOS_MAKE) -C rwsem
 	$(KOS_MAKE) -C recursive_lock
 	$(KOS_MAKE) -C once
+	$(KOS_MAKE) -C tls
 
 clean:
 	$(KOS_MAKE) -C general clean
 	$(KOS_MAKE) -C rwsem clean
 	$(KOS_MAKE) -C recursive_lock clean
 	$(KOS_MAKE) -C once clean
+	$(KOS_MAKE) -C tls clean
 
 dist:
 	$(KOS_MAKE) -C general dist
 	$(KOS_MAKE) -C rwsem dist
 	$(KOS_MAKE) -C recursive_lock dist
 	$(KOS_MAKE) -C once dist
+	$(KOS_MAKE) -C tls dist
 
