@@ -5,7 +5,7 @@
 #
 
 OBJS =  sem.o cond.o mutex.o genwait.o
-OBJS += thread.o rwsem.o recursive_lock.o once.o
+OBJS += thread.o rwsem.o recursive_lock.o once.o tls.o
 SUBDIRS = 
 
 include $(KOS_BASE)/Makefile.prefab
