@@ -179,6 +179,8 @@ KallistiOS version 1.3.0 -----------------------------------------------
 - *** Added an implementation of DHCP to the network stack [LS]
 - DC  Added Dreameye driver that is capable of fetching stored images from the
       device. [LS]
+- *** Added kthread_once function (think pthread_once) [LS]
+- *** Added pthreads-like thread-local storage [LS]
 
 KallistiOS version 1.2.0 -----------------------------------------------
 - DC  Fix to use DCARM7_CFLAGS when compiling ARM driver [Christian Groessler == CG]
